[package]
name = "physics-example"
version = "0.1.0"
authors = ["Konstantin  Grech <kgrech@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21"
ncollide3d = "0.23"
nphysics3d = "0.16.1"
nphysics_testbed3d = "0.10.0"

# Set the default for dependencies.
[profile.dev]
opt-level = 2
